--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
     <div class="dashboard">
         
         <div class="seccion">
-            <div class="categoria">Horarios y Días</div>
+            <div class="categoria">HORARIOS DE VISITAS</div>
             <div class="info">
-                <span id="txt-horarios">Martes a Domingo: 09:00 - 18:00 | Lunes: Cerrado</span>
+                <span id="txt-horarios">MARTES A VIERNES: 09:00 - 18:00 | Lunes/Domingo: Cerrado</span>
             </div>
         </div>
 
@@ -126,4 +126,5 @@
 
         <div class="seccion">
             <div class="categoria">Salas Itinerantes</div>
+
             <div class="info">
