--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             background: var(--azul-marino);
             color: var(--blanco);
             padding: 5px 20px;
-            font-size: 0.9rem;
+            font-size: 15rem;
             letter-spacing: 3px;
             z-index: 10;
             border-bottom-left-radius: 10px;
@@ -118,14 +118,16 @@
         </div>
 
         <div class="seccion">
-            <div class="categoria">Salas para visitar</div>
+            <div class="categoria">SALAS PARA VISITAR</div>
             <div class="info">
-                <span id="txt-salas">Arqueología (Pila 1), Arte Sacro (Pila 2), Historia Naval</span>
+                <span id="txt-salas">SALON VERDE (Pila 1), SALON DORADO (Pila 2), Historia Naval</span>
             </div>
         </div>
 
         <div class="seccion">
             <div class="categoria">Salas Itinerantes</div>
-
+ <div class="info">
+                <span id="txt-salas">ANTONIETA (Pila 1), BGRAGA (Pila 2)</span>
             <div class="info">
+
 
